@@ -259,6 +259,9 @@ Release 2.4.0 - UNRELEASED
     YARN-1527. Fix yarn rmadmin command to print the correct usage info.
     (Akira AJISAKA via jianhe)
 
+    YARN-1522. Fixed a race condition in the test TestApplicationCleanup that was
+    causing it to randomly fail. (Liyin Liang via vinodkv)
+
 Release 2.3.0 - UNRELEASED
 
   INCOMPATIBLE CHANGES
